# zugubul

./: .gitignore  LICENSE  README.md  gui-requirements.in  gui-requirements.txt  pyannote-requirements.txt  pyproject.toml  requirements.in  requirements.txt  torch-requirements.in  torch-requirements.txt
rVADfast_py_2.0/: speechproc.py
src/: rvad_to_elan.py  wav_to_elan.py
src/rVAD/: audio_stream.py  rVAD_fast.py  rVAD_fast_stream.py  speechproc.py
src/silero_vad/: __init__.py  __main__.py
src/zugubul/: elan_tools.py  error_analysis.py  main.py  remote.py  rvad_to_elan.py  scripts.py  textnorm.py  textnorm_window.py  utils.py  vad_to_elan.py  wav_to_elan.py
src/zugubul/models/: __init__.py  _constants.py  _metrics.py  dataset.py  decode.py  eval.py  infer.py  main.py  models.py  processor.py  train.py  vocab.py
src/zugubul/vad/: pyannote.py  silero_vad.py
src/zugubul/vad/rVAD/: __init__.py  rVAD_fast.py  rVAD_fast_stream.py
tests/: dataset_test.py  elan_tools_test.py  error_analysis_test.py  infer_test.py  rvad_to_elan_test.py  test_dendi1_frames.vad  test_dendi1_matlab_frames.vad  test_dendi1_matlab_segs.vad  test_dendi1_segs_refactor.vad  test_rvad_refactor.py  test_tira1.pfsx  test_tira1_frames.vad  test_tira1_matlab_frames.vad  test_tira1_segs.vad  test_tira1_segs_refactor.vad  textnorm_test.py  unittests.py  utils_test.py  vad_test.py  vocab_test.py
tests/eafs/: test_tira_template.etf
tests/vads/: test_dendi1_batch.vad  test_dendi1_gold.vad  test_tira1_batch.vad  test_tira1_gold.vad
zugubul/: __init__.py
zugubul/tests/: unittests.py
