[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rVAD", "zugubul"]
package-dir = {"" = "src"}

[project]
name = "zugubul"
authors = [
    {name = "Mark Simmons", email = "mjsimmons@ucsd.edu"},
]
description = "Pipeline for automatic transcription of audio files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.2.0"

[project.scripts]
zugubul = "zugubul.scripts:main"
rvad = "rVAD.rVAD_fast:main"