[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rVAD", "zugubul", "zugubul_icons"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {torch = {file = ["torch-requirements.txt"]}, gui= {file = ["gui-requirements.txt"]}, pyannote= {file = ["pyannote-requirements.txt"]}}

[project]
name = "zugubul"
authors = [
    {name = "Mark Simmons", email = "mjsimmons@ucsd.edu"},
]
description = "Pipeline for automatic transcription of audio files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.2.0"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
zugubul = "zugubul.main:main"
rvad = "rVAD.rVAD_fast:main"